syntax = "proto3";

import "google/protobuf/descriptor.proto";

option cc_generic_services = false;

enum NET_Messages {
	net_NOP = 0;
	net_Disconnect = 1;
	net_File = 2;
	net_SplitScreenUser = 3;
	net_Tick = 4;
	net_StringCmd = 5;
	net_SetConVar = 6;
	net_SignonState = 7;
	net_PlayerAvatarData = 100;
}

enum CLC_Messages {
	clc_ClientInfo = 8;
	clc_Move = 9;
	clc_VoiceData = 10;
	clc_BaselineAck = 11;
	clc_ListenEvents = 12;
	clc_RespondCvarValue = 13;
	clc_FileCRCCheck = 14;
	clc_LoadingProgress = 15;
	clc_SplitPlayerConnect = 16;
	clc_ClientMessage = 17;
	clc_CmdKeyValues = 18;
	clc_HltvReplay = 20;
}

enum VoiceDataFormat_t {
	VOICEDATA_FORMAT_STEAM = 0;
	VOICEDATA_FORMAT_ENGINE = 1;
}

enum ESplitScreenMessageType {
	option allow_alias = true;
	MSG_SPLITSCREEN_ADDUSER = 0;
	MSG_SPLITSCREEN_REMOVEUSER = 1;
	MSG_SPLITSCREEN_TYPE_BITS = 1;
}

enum SVC_Messages {
	svc_ServerInfo = 8;
	svc_SendTable = 9;
	svc_ClassInfo = 10;
	svc_SetPause = 11;
	svc_CreateStringTable = 12;
	svc_UpdateStringTable = 13;
	svc_VoiceInit = 14;
	svc_VoiceData = 15;
	svc_Print = 16;
	svc_Sounds = 17;
	svc_SetView = 18;
	svc_FixAngle = 19;
	svc_CrosshairAngle = 20;
	svc_BSPDecal = 21;
	svc_SplitScreen = 22;
	svc_UserMessage = 23;
	svc_EntityMessage = 24;
	svc_GameEvent = 25;
	svc_PacketEntities = 26;
	svc_TempEntities = 27;
	svc_Prefetch = 28;
	svc_Menu = 29;
	svc_GameEventList = 30;
	svc_GetCvarValue = 31;
	svc_PaintmapData = 33;
	svc_CmdKeyValues = 34;
	svc_EncryptedData = 35;
	svc_HltvReplay = 36;
	svc_Broadcast_Command = 38;
}

enum ReplayEventType_t {
	REPLAY_EVENT_CANCEL = 0;
	REPLAY_EVENT_DEATH = 1;
	REPLAY_EVENT_GENERIC = 2;
	REPLAY_EVENT_STUCK_NEED_FULL_UPDATE = 3;
}

message CMsgVector {
	float x = 1;
	float y = 2;
	float z = 3;
}

message CMsgVector2D {
	float x = 1;
	float y = 2;
}

message CMsgQAngle {
	float x = 1;
	float y = 2;
	float z = 3;
}

message CMsgRGBA {
	int32 r = 1;
	int32 g = 2;
	int32 b = 3;
	int32 a = 4;
}

message CNETMsg_Tick {
	uint32 tick = 1;
	uint32 host_computationtime = 4;
	uint32 host_computationtime_std_deviation = 5;
	uint32 host_framestarttime_std_deviation = 6;
	uint32 hltv_replay_flags = 7;
}

message CNETMsg_StringCmd {
	string command = 1;
}

message CNETMsg_SignonState {
	uint32 signon_state = 1;
	uint32 spawn_count = 2;
	uint32 num_server_players = 3;
	repeated string players_networkids = 4;
	string map_name = 5;
}

message CMsg_CVars {
	message CVar {
		string name = 1;
		string value = 2;
		uint32 dictionary_name = 3;
	}

	repeated .CMsg_CVars.CVar cvars = 1;
}

message CNETMsg_SetConVar {
	.CMsg_CVars convars = 1;
}

message CNETMsg_NOP {
}

message CNETMsg_Disconnect {
	string text = 1;
}

message CNETMsg_File {
	int32 transfer_id = 1;
	string file_name = 2;
	bool is_replay_demo_file = 3;
	bool deny = 4;
}

message CNETMsg_SplitScreenUser {
	int32 slot = 1;
}

message CNETMsg_PlayerAvatarData {
	uint32 accountid = 1;
	bytes rgb = 2;
}

message CCLCMsg_ClientInfo {
	fixed32 send_table_crc = 1;
	uint32 server_count = 2;
	bool is_hltv = 3;
	bool is_replay = 4;
	uint32 friends_id = 5;
	string friends_name = 6;
	repeated fixed32 custom_files = 7;
}

message CCLCMsg_Move {
	uint32 num_backup_commands = 1;
	uint32 num_new_commands = 2;
	bytes data = 3;
}

message CCLCMsg_VoiceData {
	bytes data = 1;
	fixed64 xuid = 2;
	.VoiceDataFormat_t format = 3 [default = VOICEDATA_FORMAT_ENGINE];
	int32 sequence_bytes = 4;
	uint32 section_number = 5;
	uint32 uncompressed_sample_offset = 6;
}

message CCLCMsg_BaselineAck {
	int32 baseline_tick = 1;
	int32 baseline_nr = 2;
}

message CCLCMsg_ListenEvents {
	repeated fixed32 event_mask = 1;
}

message CCLCMsg_RespondCvarValue {
	int32 cookie = 1;
	int32 status_code = 2;
	string name = 3;
	string value = 4;
}

message CCLCMsg_FileCRCCheck {
	int32 code_path = 1;
	string path = 2;
	int32 code_filename = 3;
	string filename = 4;
	int32 file_fraction = 5;
	bytes md5 = 6;
	uint32 crc = 7;
	int32 file_hash_type = 8;
	int32 file_len = 9;
	int32 pack_file_id = 10;
	int32 pack_file_number = 11;
}

message CCLCMsg_LoadingProgress {
	int32 progress = 1;
}

message CCLCMsg_SplitPlayerConnect {
	.CMsg_CVars convars = 1;
}

message CCLCMsg_CmdKeyValues {
	bytes keyvalues = 1;
}

message CSVCMsg_ServerInfo {
	int32 protocol = 1;
	int32 server_count = 2;
	bool is_dedicated = 3;
	bool is_official_valve_server = 4;
	bool is_hltv = 5;
	bool is_replay = 6;
	bool is_redirecting_to_proxy_relay = 21;
	int32 c_os = 7;
	fixed32 map_crc = 8;
	fixed32 client_crc = 9;
	fixed32 string_table_crc = 10;
	int32 max_clients = 11;
	int32 max_classes = 12;
	int32 player_slot = 13;
	float tick_interval = 14;
	string game_dir = 15;
	string map_name = 16;
	string map_group_name = 17;
	string sky_name = 18;
	string host_name = 19;
	uint32 public_ip = 20;
	uint64 ugc_map_id = 22;
}

message CSVCMsg_ClassInfo {
	message class_t {
		int32 class_id = 1;
		string data_table_name = 2;
		string class_name = 3;
	}

	bool create_on_client = 1;
	repeated .CSVCMsg_ClassInfo.class_t classes = 2;
}

message CSVCMsg_SendTable {
	message sendprop_t {
		int32 type = 1;
		string var_name = 2;
		int32 flags = 3;
		int32 priority = 4;
		string dt_name = 5;
		int32 num_elements = 6;
		float low_value = 7;
		float high_value = 8;
		int32 num_bits = 9;
	}

	bool is_end = 1;
	string net_table_name = 2;
	bool needs_decoder = 3;
	repeated .CSVCMsg_SendTable.sendprop_t props = 4;
}

message CSVCMsg_Print {
	string text = 1;
}

message CSVCMsg_SetPause {
	bool paused = 1;
}

message CSVCMsg_SetView {
	int32 entity_index = 1;
}

message CSVCMsg_CreateStringTable {
	string name = 1;
	int32 max_entries = 2;
	int32 num_entries = 3;
	bool user_data_fixed_size = 4;
	int32 user_data_size = 5;
	int32 user_data_size_bits = 6;
	int32 flags = 7;
	bytes string_data = 8;
}

message CSVCMsg_UpdateStringTable {
	int32 table_id = 1;
	int32 num_changed_entries = 2;
	bytes string_data = 3;
}

message CSVCMsg_VoiceInit {
	int32 quality = 1;
	string codec = 2;
	int32 version = 3 [default = 0];
}

message CSVCMsg_VoiceData {
	int32 client = 1;
	bool proximity = 2;
	fixed64 xuid = 3;
	int32 audible_mask = 4;
	bytes voice_data = 5;
	bool caster = 6;
	.VoiceDataFormat_t format = 7 [default = VOICEDATA_FORMAT_ENGINE];
	int32 sequence_bytes = 8;
	uint32 section_number = 9;
	uint32 uncompressed_sample_offset = 10;
}

message CSVCMsg_FixAngle {
	bool relative = 1;
	.CMsgQAngle angle = 2;
}

message CSVCMsg_CrosshairAngle {
	.CMsgQAngle angle = 1;
}

message CSVCMsg_Prefetch {
	int32 sound_index = 1;
}

message CSVCMsg_BSPDecal {
	.CMsgVector pos = 1;
	int32 decal_texture_index = 2;
	int32 entity_index = 3;
	int32 model_index = 4;
	bool low_priority = 5;
}

message CSVCMsg_SplitScreen {
	.ESplitScreenMessageType type = 1 [default = MSG_SPLITSCREEN_ADDUSER];
	int32 slot = 2;
	int32 player_index = 3;
}

message CSVCMsg_GetCvarValue {
	int32 cookie = 1;
	string cvar_name = 2;
}

message CSVCMsg_Menu {
	int32 dialog_type = 1;
	bytes menu_key_values = 2;
}

message CSVCMsg_UserMessage {
	int32 msg_type = 1;
	bytes msg_data = 2;
	int32 passthrough = 3;
}

message CSVCMsg_PaintmapData {
	bytes paintmap = 1;
}

message CSVCMsg_GameEvent {
	message key_t {
		int32 type = 1;
		string val_string = 2;
		float val_float = 3;
		int32 val_long = 4;
		int32 val_short = 5;
		int32 val_byte = 6;
		bool val_bool = 7;
		uint64 val_uint64 = 8;
		bytes val_wstring = 9;
	}

	string event_name = 1;
	int32 eventid = 2;
	repeated .CSVCMsg_GameEvent.key_t keys = 3;
	int32 passthrough = 4;
}

message CSVCMsg_GameEventList {
	message key_t {
		int32 type = 1;
		string name = 2;
	}

	message descriptor_t {
		int32 eventid = 1;
		string name = 2;
		repeated .CSVCMsg_GameEventList.key_t keys = 3;
	}

	repeated .CSVCMsg_GameEventList.descriptor_t descriptors = 1;
}

message CSVCMsg_TempEntities {
	bool reliable = 1;
	int32 num_entries = 2;
	bytes entity_data = 3;
}

message CSVCMsg_PacketEntities {
	int32 max_entries = 1;
	int32 updated_entries = 2;
	bool is_delta = 3;
	bool update_baseline = 4;
	int32 baseline = 5;
	int32 delta_from = 6;
	bytes entity_data = 7;
}

message CSVCMsg_Sounds {
	message sounddata_t {
		sint32 origin_x = 1;
		sint32 origin_y = 2;
		sint32 origin_z = 3;
		uint32 volume = 4;
		float delay_value = 5;
		int32 sequence_number = 6;
		int32 entity_index = 7;
		int32 channel = 8;
		int32 pitch = 9;
		int32 flags = 10;
		uint32 sound_num = 11;
		fixed32 sound_num_handle = 12;
		int32 speaker_entity = 13;
		int32 random_seed = 14;
		int32 sound_level = 15;
		bool is_sentence = 16;
		bool is_ambient = 17;
	}

	bool reliable_sound = 1;
	repeated .CSVCMsg_Sounds.sounddata_t sounds = 2;
}

message CSVCMsg_EntityMsg {
	int32 ent_index = 1;
	int32 class_id = 2;
	bytes ent_data = 3;
}

message CSVCMsg_CmdKeyValues {
	bytes keyvalues = 1;
}

message CSVCMsg_EncryptedData {
	bytes encrypted = 1;
	int32 key_type = 2;
}

message CSVCMsg_HltvReplay {
	int32 delay = 1;
	int32 primary_target = 2;
	int32 replay_stop_at = 3;
	int32 replay_start_at = 4;
	int32 replay_slowdown_begin = 5;
	int32 replay_slowdown_end = 6;
	float replay_slowdown_rate = 7;
}

message CCLCMsg_HltvReplay {
	int32 request = 1;
	float slowdown_length = 2;
	float slowdown_rate = 3;
	int32 primary_target_ent_index = 4;
	float event_time = 5;
}

message CSVCMsg_Broadcast_Command {
	string cmd = 1;
}

